--- a/manifest.json
+++ b/manifest.json
@@ -14,7 +14,7 @@
     },
     "content_scripts": [
         {
-            "matches": ["https://www.baidu.com/s*", "https://www.zhihu.com/*"],
+            "matches": ["https://www.baidu.com/s*", "https://www.zhihu.com/*", "https://www.bilibili.com/*"],
             "js": ["/static/js/jquery-3.6.3.min.js", "/static/js/bilibili-evolved.user.js", "/static/js/content.js"],
             "run_at": "document_start"
         }
