--- a/manifest.json
+++ b/manifest.json
@@ -14,8 +14,19 @@
     },
     "content_scripts": [
         {
-            "matches": ["https://www.baidu.com/s*", "https://www.zhihu.com/*", "https://*.bilibili.com/*"],
-            "js": ["/static/js/jquery-3.6.3.min.js","/static/js/lodash.min.js" ,"/static/js/Bilibili Evolved.user.js", "/static/js/content.js"],
+            "matches": [
+                "https://www.baidu.com/s*",
+                "https://www.zhihu.com/*",
+                "https://*.bilibili.com/*"
+            ],
+            "js": [
+                "/static/package/jquery-3.6.3.min.js",
+                "/static/package/lodash.min.js",
+                "/static/package/Bilibili Evolved.user.js",
+                "/static/package/jieba.js",
+                "/static/package/dictionary.js",
+                "/static/js/content.js"
+            ],
             "run_at": "document_start"
         }
     ],
